# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."is_email_verified",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.1
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.10
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:AGGREGATE_BY_DISTINCT_IDS_TEAMS'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.11
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:MATERIALIZED_COLUMNS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.12
  '
  SELECT "posthog_sessionrecording"."id",
         "posthog_sessionrecording"."session_id",
         "posthog_sessionrecording"."team_id",
         "posthog_sessionrecording"."created_at",
         "posthog_sessionrecording"."deleted",
         "posthog_sessionrecording"."object_storage_path",
         "posthog_sessionrecording"."distinct_id",
         "posthog_sessionrecording"."duration",
         "posthog_sessionrecording"."start_time",
         "posthog_sessionrecording"."end_time",
         "posthog_sessionrecording"."click_count",
         "posthog_sessionrecording"."keypress_count",
         "posthog_sessionrecording"."start_url",
         COUNT("posthog_sessionrecordingplaylistitem"."id") AS "pinned_count"
  FROM "posthog_sessionrecording"
  LEFT OUTER JOIN "posthog_sessionrecordingplaylistitem" ON ("posthog_sessionrecording"."session_id" = "posthog_sessionrecordingplaylistitem"."recording_id")
  WHERE ("posthog_sessionrecording"."session_id" IN ('1')
         AND "posthog_sessionrecording"."team_id" = 2)
  GROUP BY "posthog_sessionrecording"."id" /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.13
  '
  SELECT "posthog_sessionrecordingviewed"."session_id"
  FROM "posthog_sessionrecordingviewed"
  WHERE ("posthog_sessionrecordingviewed"."team_id" = 2
         AND "posthog_sessionrecordingviewed"."user_id" = 2) /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.14
  '
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version",
         "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_persondistinctid"
  INNER JOIN "posthog_person" ON ("posthog_persondistinctid"."person_id" = "posthog_person"."id")
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('user')
         AND "posthog_persondistinctid"."team_id" = 2) /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.15
  '
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE "posthog_persondistinctid"."person_id" IN (1,
                                                   2,
                                                   3,
                                                   4,
                                                   5 /* ... */) /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.16
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.17
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."is_email_verified",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.18
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.19
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 2 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.2
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 2 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.20
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:AGGREGATE_BY_DISTINCT_IDS_TEAMS'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.21
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:MATERIALIZED_COLUMNS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.22
  '
  SELECT "posthog_sessionrecording"."id",
         "posthog_sessionrecording"."session_id",
         "posthog_sessionrecording"."team_id",
         "posthog_sessionrecording"."created_at",
         "posthog_sessionrecording"."deleted",
         "posthog_sessionrecording"."object_storage_path",
         "posthog_sessionrecording"."distinct_id",
         "posthog_sessionrecording"."duration",
         "posthog_sessionrecording"."start_time",
         "posthog_sessionrecording"."end_time",
         "posthog_sessionrecording"."click_count",
         "posthog_sessionrecording"."keypress_count",
         "posthog_sessionrecording"."start_url",
         COUNT("posthog_sessionrecordingplaylistitem"."id") AS "pinned_count"
  FROM "posthog_sessionrecording"
  LEFT OUTER JOIN "posthog_sessionrecordingplaylistitem" ON ("posthog_sessionrecording"."session_id" = "posthog_sessionrecordingplaylistitem"."recording_id")
  WHERE ("posthog_sessionrecording"."session_id" IN ('2',
                                                     '1')
         AND "posthog_sessionrecording"."team_id" = 2)
  GROUP BY "posthog_sessionrecording"."id" /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.23
  '
  SELECT "posthog_sessionrecordingviewed"."session_id"
  FROM "posthog_sessionrecordingviewed"
  WHERE ("posthog_sessionrecordingviewed"."team_id" = 2
         AND "posthog_sessionrecordingviewed"."user_id" = 2) /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.24
  '
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version",
         "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_persondistinctid"
  INNER JOIN "posthog_person" ON ("posthog_persondistinctid"."person_id" = "posthog_person"."id")
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('user2',
                                                      'user')
         AND "posthog_persondistinctid"."team_id" = 2) /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.25
  '
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE "posthog_persondistinctid"."person_id" IN (1,
                                                   2,
                                                   3,
                                                   4,
                                                   5 /* ... */) /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.26
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.27
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."is_email_verified",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.28
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.29
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 2 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.3
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:AGGREGATE_BY_DISTINCT_IDS_TEAMS'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.30
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:AGGREGATE_BY_DISTINCT_IDS_TEAMS'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.31
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:MATERIALIZED_COLUMNS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.32
  '
  SELECT "posthog_sessionrecording"."id",
         "posthog_sessionrecording"."session_id",
         "posthog_sessionrecording"."team_id",
         "posthog_sessionrecording"."created_at",
         "posthog_sessionrecording"."deleted",
         "posthog_sessionrecording"."object_storage_path",
         "posthog_sessionrecording"."distinct_id",
         "posthog_sessionrecording"."duration",
         "posthog_sessionrecording"."start_time",
         "posthog_sessionrecording"."end_time",
         "posthog_sessionrecording"."click_count",
         "posthog_sessionrecording"."keypress_count",
         "posthog_sessionrecording"."start_url",
         COUNT("posthog_sessionrecordingplaylistitem"."id") AS "pinned_count"
  FROM "posthog_sessionrecording"
  LEFT OUTER JOIN "posthog_sessionrecordingplaylistitem" ON ("posthog_sessionrecording"."session_id" = "posthog_sessionrecordingplaylistitem"."recording_id")
  WHERE ("posthog_sessionrecording"."session_id" IN ('2',
                                                     '3',
                                                     '1')
         AND "posthog_sessionrecording"."team_id" = 2)
  GROUP BY "posthog_sessionrecording"."id" /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.33
  '
  SELECT "posthog_sessionrecordingviewed"."session_id"
  FROM "posthog_sessionrecordingviewed"
  WHERE ("posthog_sessionrecordingviewed"."team_id" = 2
         AND "posthog_sessionrecordingviewed"."user_id" = 2) /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.34
  '
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version",
         "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_persondistinctid"
  INNER JOIN "posthog_person" ON ("posthog_persondistinctid"."person_id" = "posthog_person"."id")
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('user2',
                                                      'user3',
                                                      'user')
         AND "posthog_persondistinctid"."team_id" = 2) /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.35
  '
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE "posthog_persondistinctid"."person_id" IN (1,
                                                   2,
                                                   3,
                                                   4,
                                                   5 /* ... */) /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.4
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:MATERIALIZED_COLUMNS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.5
  '
  SELECT "posthog_sessionrecordingviewed"."session_id"
  FROM "posthog_sessionrecordingviewed"
  WHERE ("posthog_sessionrecordingviewed"."team_id" = 2
         AND "posthog_sessionrecordingviewed"."user_id" = 2) /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.6
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.7
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."is_email_verified",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.8
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
# name: TestSessionRecordings.test_listing_recordings_is_not_nplus1_for_persons.9
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 2 /*controller='project_session_recordings-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/session_recordings/%3F%24'*/
  '
---
